# SVGAnnotation

./: .Rbuildignore  Changes  DESCRIPTION  DESCRIPTION.in  FAQ.html  FAQ.xml  GNUmakefile  JS_FAQ.xml  NAMESPACE  Todo.xml  Windows  animate.R  cairoVersion.R  config.status  configure  configure.in  configure.win  gabeNotes.xml
R/: aclassShapes.R  animate_grz.R  barplot.R  boxes.R  boxplots.R  classes.R  compressStyles.R  config.R  config.R.in  ecmaScript.R  graphviz.R  grz.R  guess.R  identifyLatticeElements.R  inBox.R  labels.R  lattice.R  linking.R  mosaic.R  parcoord.R  paths.R  pch.R  radioShowHide.R  slider.R  svg.R  textNodes.R  tooltips.R  utils.R
Temp/: DESCRIPTION.in  NAMESPACE.in  configure.in
Web/: GNUmakefile  config.status  examples.html  index.html  index.html.in
autom4te.cache/: output.0  requests  traces.0
data/: election2008.rda  electionHistory.rda  eu.rda  traffic.rda
inst/: CITATION
inst/CSS/: RSVGPlot.css
inst/HTMLExamples/: box.css  box.html  callSVG.html  choiceMenu.html  index.html  obama.R  twoPlots.html  twoPlots1.html
inst/JavaScript/: Title.js  alert.js  betaSlider.js  highlightEdgesSmall.js  imatplot.js  legend.js  link.js
inst/SVGGUI/: colourPicker.js  combobox.js  hideSVGElements.js  (+1 more)
man/: SVGAnnotation.Rd  XMLPlot-class.Rd  addAxesLinks.Rd  addCSS.Rd  addECMAScripts.Rd  addLink.Rd  addSlider.Rd  addToolTips.Rd  allStates.Rd  animate.Rd  annotateMosaic.Rd  asTextNode.Rd  compressStyles.Rd  convertCSSStylesToSVG.Rd  currency.names.Rd  electionHistory.Rd  enlargeSVGViewBox.Rd  eu.Rd  exitData.Rd  getAxesLabelNodes.Rd  getBoundingBox.Rd  getCSS.Rd  getLatticeLegend.Rd  getNodeElements.Rd  getPlotRegionNodes.Rd  getShape.Rd  getStyle.Rd  getTopContainer.Rd  getViewBox.Rd  groupByPch.Rd  guessSVGShape.Rd  highlightMatplot.Rd  internal.Rd  isAnnotationGroup.Rd  isInside.Rd  linkPlots.Rd  pathToCircle.Rd  radioShowHide.Rd  states.Rd  svg.Rd  (+2 more)
tests/: abline.R  addECMA.R  anim.R  anim.xml  animNAs.R  animateMultiPlot.R  animation.R  barplot.R  barplot.Rdb  boosting.xml  boxplot.R  browserUsage.rda  checkNS.R  circle.R  emptySlider.R  euCurrencyNames  exScatterPlotAnimation.R  gapminder.xml  gen.R  ggplot.R  gm.R  gm1.R  gm2.R  gm4.R  gm5.R  gmInit.R  graphviz.R  graphviz.xml  graphvizDot.R  guess.R  hexbin.R  href.R  imatplot.Rdb  knn.xml  latticeLegend.R  latticeLegend.xml  latticeLegendText.xml  latticeStrips.R  layout.R  legend.R  (+26 more)
(+71 files in other folders)
